.scss files, images and Webserver

--- a/webpack/src/assets/css/estilo.css
+++ b/webpack/src/assets/css/estilo.css
@@ -1,3 +1,7 @@
 body{
     background-color: red;
+    background-image: url(../imgs/resumo-liso-fundo-laranja-layout-designstudioroom-modelo-de-web-relatorio-comercial-com-liso-c_1258-54783.avif);
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
 }
